[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/BossRooms.gd" type="Script" id=1]
[ext_resource path="res://scenes/City/2D_WorldMap/Buildings/bossroom.png" type="Texture" id=2]
[ext_resource path="res://scenes/Player/2DPlayer01/2DPlayerAvatar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Player/OldPartner.tscn" type="PackedScene" id=4]

[node name="BossRoom" type="Node2D"]
script = ExtResource( 1 )

[node name="floor" type="Sprite" parent="."]
modulate = Color( 0.54902, 0.54902, 0.54902, 1 )
position = Vector2( 512, 512 )

[node name="Walls" type="Sprite" parent="."]
position = Vector2( 512, 512 )
texture = ExtResource( 2 )

[node name="Polygon" type="StaticBody2D" parent="Walls"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/Polygon"]
position = Vector2( 0.0999756, 0 )
scale = Vector2( 0.999878, 1 )
polygon = PoolVector2Array( -502, -502, -512, -502, -512, -512, 512, -512, 512, -502 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Walls/Polygon"]
polygon = PoolVector2Array( -512, -512, -502, -512, -502, 512, -512, 512 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Walls/Polygon"]
polygon = PoolVector2Array( -512, 512, -512, 502, 512, 502, 512, 512 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Walls/Polygon"]
polygon = PoolVector2Array( 512, -512, 502, -512, 502, 512, 512, 512 )

[node name="Barrier" type="StaticBody2D" parent="Walls"]

[node name="Polygon2D" type="Polygon2D" parent="Walls/Barrier"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/Barrier"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="Barrier2" type="StaticBody2D" parent="Walls"]
position = Vector2( 8, 570 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/Barrier2"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/Barrier2"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="Barrier3" type="StaticBody2D" parent="Walls"]
position = Vector2( 7, 281 )

[node name="Polygon2D" type="Polygon2D" parent="Walls/Barrier3"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls/Barrier3"]
polygon = PoolVector2Array( 51, -358, 169, -358, 170, -252, 53, -251 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "Player" ), [ ExtResource( 3 ) ] ]

[node name="OldPartner" parent="." instance=ExtResource( 4 )]
position = Vector2( 206, 479 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 831, 481 )

[node name="Player" type="Node2D" parent="."]
